# ai-syncfiles

./: .gitignore  main.py  pydantic_demo.py  pyproject.toml
